examples/test/testpolicy15959.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15959
  namespace: namespace13
spec:
  podSelector:
    matchLabels:
      key13: value45
      key44: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value45
          key28: value25
          key7: value9
      podSelector:
        matchLabels:
          key19: value9
          key2: value10
          key40: value25
